--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 3.1.91
+~~~~~~~~~~~~~~
+Released: 2011-09-05
+
+* Bugfix:
+ - Set the calibration wizard to the summary page when finished (Richard Hughes)
+ - Ensure the 2nd stage calibration has the larger calibration square (Richard Hughes)
+
 Version 3.1.90
 ~~~~~~~~~~~~~~
 Released: 2011-08-30
