--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Version 3.1.92
+~~~~~~~~~~~~~~
+Released: 2011-09-19
+
+* Translations
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Swedish translation (Daniel Nylander)
+
+* Bugfix:
+ - Ensure the calibration dialog can be set modal (Richard Hughes)
+ - Escape profile titles that have markup in the titles (Richard Hughes)
+ - Ignore inaccessable profiles from other user accounts (Richard Hughes)
+ - Remove the GLSL demo file, it's moved to colord-playground (Richard Hughes)
+ - Update the man pages to reflect reality (Richard Hughes)
+
 Version 3.1.91
 ~~~~~~~~~~~~~~
 Released: 2011-09-05
