Preliminary update of Russian translation to match the recent fix

--- a/po/ru.po
+++ b/po/ru.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager 3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-20 13:55+0400\n"
-"PO-Revision-Date: 2011-09-21 06:37+0400\n"
+"POT-Creation-Date: 2011-09-21 18:49+0400\n"
+"PO-Revision-Date: 2011-09-22 06:40+0400\n"
 "Last-Translator: Александр Прокудин <alexandre.prokoudine@gmail.com>\n"
 "Language-Team: Russian <gnome-cyr@lists.gnome.org>\n"
 "Language: ru\n"
@@ -42,13 +42,177 @@ msgstr "Цветовая пипетка"
 msgid "Use the color sensor to sample spot colors"
 msgstr ""
 
-#: ../data/gcm-viewer.desktop.in.h:1
+#: ../data/gcm-viewer.desktop.in.h:1 ../data/gcm-viewer.ui.h:7
 msgid "Color Profile Viewer"
 msgstr "Просмотрщик цветовых профилей"
 
 #: ../data/gcm-viewer.desktop.in.h:2
 msgid "Inspect and compare installed color profiles"
 msgstr "Исследование и сравнивание установленных цветовых профилей"
+
+#: ../data/gcm-viewer.ui.h:1
+msgid "3D Gamut"
+msgstr "Цветовой охват в 3D"
+
+#: ../data/gcm-viewer.ui.h:2
+msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
+msgstr ""
+"Диаграмма CIE 1931, показывающая двухмерное представление цветового охвата"
+
+#: ../data/gcm-viewer.ui.h:3
+msgid ""
+"A tone reproduction curve is the mapping of scene luminance to display "
+"luminance"
+msgstr ""
+"Кривая тоновоспроизведения является проекций светимости сцены на светимость "
+"монитора"
+
+#: ../data/gcm-viewer.ui.h:4
+msgid "A video card gamma table shows the curves loaded into the display"
+msgstr "Таблица гаммы видеокарты показывает загруженые кривые"
+
+#: ../data/gcm-viewer.ui.h:5
+msgid "Add a profile for the device"
+msgstr "Добавить цветовой профиль к выбранному устройству"
+
+#: ../data/gcm-viewer.ui.h:6
+msgid "CIE 1931"
+msgstr "CIE 1931"
+
+#. The profile colorspace, e.g. RGB
+#: ../data/gcm-viewer.ui.h:9
+msgid "Colorspace"
+msgstr "Цветовое пространство"
+
+#. When the profile was created
+#: ../data/gcm-viewer.ui.h:11
+msgid "Created"
+msgstr "Создан"
+
+#. The manufacturer of the profile
+#: ../data/gcm-viewer.ui.h:13
+msgid "Device manufacturer"
+msgstr "Производитель устройства"
+
+#. The manufacturer of the profile
+#: ../data/gcm-viewer.ui.h:15
+msgid "Device model"
+msgstr "Модель устройства"
+
+#. If the profile contains a display correction table
+#: ../data/gcm-viewer.ui.h:17
+msgid "Display correction"
+msgstr "Корректирует монитор"
+
+#. The file size in bytes of the profile
+#: ../data/gcm-viewer.ui.h:19
+msgid "File size"
+msgstr "Размер файла"
+
+#. The basename (the last section of the filename) of the profile
+#: ../data/gcm-viewer.ui.h:21
+msgid "Filename"
+msgstr "Имя файла"
+
+#: ../data/gcm-viewer.ui.h:22
+msgid "From sRGB"
+msgstr "Из sRGB"
+
+#: ../data/gcm-viewer.ui.h:23
+msgid "Information"
+msgstr "Информация"
+
+#. The licence of the profile, normally non-free
+#: ../data/gcm-viewer.ui.h:25
+msgid "License"
+msgstr "Лицензия"
+
+#: ../data/gcm-viewer.ui.h:26
+msgid "Metadata"
+msgstr "Метаданные"
+
+#: ../data/gcm-viewer.ui.h:27
+msgid ""
+"Metadata is additional information stored in the profile for programs to use."
+msgstr ""
+"Метаданные являются описанием профиля, доступным для пользователей и других "
+"приложений"
+
+#: ../data/gcm-viewer.ui.h:28
+msgid "Named Colors"
+msgstr "Именованные цвета"
+
+#: ../data/gcm-viewer.ui.h:29
+msgid "Named colors are specific colors that are defined in the profile"
+msgstr "Именованные цвета — это специфические цвета, определённые в профиле"
+
+#. The type of profile, e.g. display, scanner, etc.
+#: ../data/gcm-viewer.ui.h:31
+msgid "Profile type"
+msgstr "Тип профиля"
+
+#: ../data/gcm-viewer.ui.h:32
+msgid "Remove a profile from the device"
+msgstr "Снять цветовой профиль с выбранного устройства"
+
+#: ../data/gcm-viewer.ui.h:33
+msgid "Response in"
+msgstr "Отклик на входе"
+
+#: ../data/gcm-viewer.ui.h:34
+msgid "Response out"
+msgstr "Отклик на выходе"
+
+#: ../data/gcm-viewer.ui.h:35
+msgid "TRC"
+msgstr "TRC"
+
+#: ../data/gcm-viewer.ui.h:36
+msgid "This 3D hull is what the profile looks like in Lab space"
+msgstr "Это вид так называемого цветового тела профиля в пространстве LAB"
+
+#: ../data/gcm-viewer.ui.h:37
+msgid "This shows what an image would look like if opened with the profile"
+msgstr ""
+
+#: ../data/gcm-viewer.ui.h:38
+msgid "This shows what an image would look like if saved with the profile"
+msgstr ""
+
+#: ../data/gcm-viewer.ui.h:39
+msgid "To sRGB"
+msgstr "В sRGB"
+
+#: ../data/gcm-viewer.ui.h:40
+msgid "VCGT"
+msgstr "VCGT"
+
+#. The version of the profile
+#: ../data/gcm-viewer.ui.h:42
+msgid "Version"
+msgstr "Версия"
+
+#: ../data/gcm-viewer.ui.h:43
+msgid "Video card out"
+msgstr ""
+
+#. The basename (the last section of the filename) of the profile
+#: ../data/gcm-viewer.ui.h:45
+msgid "White point"
+msgstr "Белая точка"
+
+#. This is an example image that is saved in sRGB gamut
+#: ../data/gcm-viewer.ui.h:47
+msgid "sRGB example"
+msgstr "Пример sRGB"
+
+#: ../data/gcm-viewer.ui.h:48
+msgid "x"
+msgstr "x"
+
+#: ../data/gcm-viewer.ui.h:49
+msgid "y"
+msgstr "y"
 
 #: ../src/gcm-calibrate-argyll.c:436
 msgid "Getting default parameters"
@@ -1785,9 +1949,6 @@ msgstr "_Измерить"
 #~ msgid "Failed to delete file"
 #~ msgstr "Не удалось удалить файл"
 
-#~ msgid "Create a color profile for the selected device"
-#~ msgstr "Создать цветовой профиль для выбранного устройства"
-
 #~ msgid "Cannot profile: No device is selected"
 #~ msgstr "Профилирование невозможно: нет выбранных устройств"
 
@@ -1833,9 +1994,6 @@ msgstr "_Измерить"
 
 #~ msgid "Camera"
 #~ msgstr "Камера"
-
-#~ msgid "More Information"
-#~ msgstr "Подробнее"
 
 #~ msgid "Loading list of devices…"
 #~ msgstr "Загружается список устройств..."
@@ -1884,9 +2042,6 @@ msgstr "_Измерить"
 #~ msgid "Red:"
 #~ msgstr "Красный:"
 
-#~ msgid "precision"
-#~ msgstr "Точность"
-
 #~ msgid ""
 #~ "A working space is the range of colors that can be encoded into an image."
 #~ msgstr ""
@@ -1911,9 +2066,6 @@ msgstr "_Измерить"
 #~ msgid "Create _Profile for Device"
 #~ msgstr "_Создать профиль"
 
-#~ msgid "Created:"
-#~ msgstr "Создан:"
-
 #~ msgid "Delete the currently selected color profile"
 #~ msgstr "Удалить выбранный цветовой профиль"
 
@@ -1927,29 +2079,14 @@ msgstr "_Измерить"
 #~ msgid "Device"
 #~ msgstr "Устройство"
 
-#~ msgid "Device manufacturer:"
-#~ msgstr "Производитель устройства:"
-
-#~ msgid "Device model:"
-#~ msgstr "Модель устройства:"
-
 #~ msgid "Device type:"
 #~ msgstr "Тип устройства:"
 
 #~ msgid "Devices"
 #~ msgstr "Устройства"
 
-#~ msgid "Display correction:"
-#~ msgstr "Корректирует монитор:"
-
 #~ msgid "Display:"
 #~ msgstr "Монитор"
-
-#~ msgid "File size:"
-#~ msgstr "Размер файла:"
-
-#~ msgid "Filename:"
-#~ msgstr "Имя файла:"
 
 #~ msgid "Fine tuning"
 #~ msgstr "Уточнение параметров"
@@ -1959,9 +2096,6 @@ msgstr "_Измерить"
 
 #~ msgid "Import an ICC file from another location"
 #~ msgstr "Импортировать файл ICC откуда-либо"
-
-#~ msgid "License:"
-#~ msgstr "Лицензия:"
 
 #~ msgid "Manufacturer:"
 #~ msgstr "Производитель:"
