Updated Polish translation

--- a/po/pl.po
+++ b/po/pl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-22 00:16+0200\n"
-"PO-Revision-Date: 2011-09-22 00:17+0200\n"
+"POT-Creation-Date: 2011-09-23 18:44+0200\n"
+"PO-Revision-Date: 2011-09-23 18:45+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "Language: pl\n"
@@ -494,8 +494,8 @@ msgstr ""
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2507
 msgid ""
-"If you make a mistake just release the switch and you'll get a chance to try "
-"again."
+"If you make a mistake, just release the switch, and you'll get a chance to "
+"try again."
 msgstr ""
 "W razie pomyłki należy po prostu zwolnić przełącznik, a będzie można "
 "spróbować ponownie."
@@ -668,7 +668,7 @@ msgid "The printer has been calibrated successfully."
 msgstr "Drukarka została pomyślnie skalibrowana."
 
 #: ../src/gcm-calibrate-main.c:775
-msgid "Docments printed from this device will be color managed."
+msgid "Documents printed from this device will be color managed."
 msgstr ""
 "Dokumenty drukowane za pomocą tego urządzenia będą posiadały zarządzane "
 "kolory."
