--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Version 3.2.0
+~~~~~~~~~~~~~
+Released: 2011-09-26
+
+* Translations
+ - Updated Czech translation (Milan Knížek)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Russian translation (Alexandre Prokoudine)
+ - Updated Slovenian translation (Martin Srebotnjak)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Traditional Chinese translation(Hong Kong and Taiwan) (Chao-Hsiung Liao)
+
+* Bugfix:
+ - Fix some user visible messages not showing up in PO files (Alexandre Prokoudine)
+
 Version 3.1.92
 ~~~~~~~~~~~~~~
 Released: 2011-09-19
