Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,23 +6,22 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2011-09-23 02:31+0000\n"
-"PO-Revision-Date: 2011-09-25 12:15+0200\n"
+"POT-Creation-Date: 2011-09-25 10:16+0000\n"
+"PO-Revision-Date: 2011-09-28 21:14+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
-"Language-Team: Español <gnome-es-list@gnome.org>\n"
+"Language-Team: Español; Castellano <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../data/gcm-calibrate.desktop.in.h:1
 msgid "Color"
 msgstr "Color"
 
 #: ../data/gcm-calibrate.desktop.in.h:2
-#| msgid "Device Calibration"
 msgid "Color Calibration"
 msgstr "Calibración del color"
 
@@ -40,10 +39,9 @@ msgid "Color Picker"
 msgstr "Selector de color"
 
 #: ../data/gcm-picker.desktop.in.h:2
-#, fuzzy
 #| msgid "The attached colorimeter is not capable of reading a spot color."
 msgid "Use the color sensor to sample spot colors"
-msgstr "El colorímetro acoplado no es capaz de leer un punto de color."
+msgstr "Use el sensor de color para muestrear los puntos de color"
 
 #: ../data/gcm-viewer.desktop.in.h:1 ../data/gcm-viewer.ui.h:7
 msgid "Color Profile Viewer"
@@ -55,7 +53,7 @@ msgstr "Inspeccionar y comparar perfiles de color instalados"
 
 #: ../data/gcm-viewer.ui.h:1
 msgid "3D Gamut"
-msgstr ""
+msgstr "Gama 3D"
 
 #: ../data/gcm-viewer.ui.h:2
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
@@ -72,70 +70,59 @@ msgid "A video card gamma table shows the curves loaded into the display"
 msgstr ""
 
 #: ../data/gcm-viewer.ui.h:5
-#, fuzzy
 #| msgid "Create a profile for the device"
 msgid "Add a profile for the device"
-msgstr "Crear un perfil para el dispositivo"
+msgstr "Añadir un perfil para el dispositivo"
 
 #: ../data/gcm-viewer.ui.h:6
-#| msgid "CIE 1931 xy"
 msgid "CIE 1931"
 msgstr "CIE 1931"
 
 #. The profile colorspace, e.g. RGB
 #: ../data/gcm-viewer.ui.h:9
-#| msgid "Colorspace:"
 msgid "Colorspace"
 msgstr "Espacio de color"
 
 #. When the profile was created
 #: ../data/gcm-viewer.ui.h:11
-#| msgid "Created:"
 msgid "Created"
 msgstr "Creado"
 
 #. The manufacturer of the profile
 #: ../data/gcm-viewer.ui.h:13
-#| msgid "Device manufacturer:"
 msgid "Device manufacturer"
 msgstr "Fabricante del dispositivo"
 
 #. The manufacturer of the profile
 #: ../data/gcm-viewer.ui.h:15
-#| msgid "Device model:"
 msgid "Device model"
 msgstr "Modelo del dispositivo"
 
 #. If the profile contains a display correction table
 #: ../data/gcm-viewer.ui.h:17
-#| msgid "Display correction:"
 msgid "Display correction"
 msgstr "Corrección de pantalla"
 
 #. The file size in bytes of the profile
 #: ../data/gcm-viewer.ui.h:19
-#| msgid "File size:"
 msgid "File size"
 msgstr "Tamaño del archivo"
 
 #. The basename (the last section of the filename) of the profile
 #: ../data/gcm-viewer.ui.h:21
-#| msgid "Filename:"
 msgid "Filename"
 msgstr "Nombre del archivo"
 
 #: ../data/gcm-viewer.ui.h:22
 msgid "From sRGB"
-msgstr ""
+msgstr "Desde sRGB"
 
 #: ../data/gcm-viewer.ui.h:23
-#| msgid "More Information"
 msgid "Information"
 msgstr "Información"
 
 #. The licence of the profile, normally non-free
 #: ../data/gcm-viewer.ui.h:25
-#| msgid "License:"
 msgid "License"
 msgstr "Licencia"
 
@@ -147,23 +134,25 @@ msgstr "Metadatos"
 msgid ""
 "Metadata is additional information stored in the profile for programs to use."
 msgstr ""
+"Los metadatos son información adicional almacenada en el perfil para que lo "
+"usen los programas."
 
 #: ../data/gcm-viewer.ui.h:28
-#, fuzzy
 #| msgid "Named color"
 msgid "Named Colors"
-msgstr "Color con nombre"
+msgstr "Colores con nombre"
 
 #: ../data/gcm-viewer.ui.h:29
 msgid "Named colors are specific colors that are defined in the profile"
 msgstr ""
+"Los colores con nombre son colores específicos que están definidos en el "
+"perfil"
 
 #. The type of profile, e.g. display, scanner, etc.
 #: ../data/gcm-viewer.ui.h:31
-#, fuzzy
 #| msgid "Profile type:"
 msgid "Profile type"
-msgstr "Tipo de perfil:"
+msgstr "Tipo de perfil"
 
 #: ../data/gcm-viewer.ui.h:32
 #, fuzzy
@@ -189,11 +178,11 @@ msgstr ""
 
 #: ../data/gcm-viewer.ui.h:37
 msgid "This shows what an image would look like if opened with the profile"
-msgstr ""
+msgstr "Esto muestra cómo será una imagen si se abre con el perfil"
 
 #: ../data/gcm-viewer.ui.h:38
 msgid "This shows what an image would look like if saved with the profile"
-msgstr ""
+msgstr "Esto muestra cómo será una imagen si se guarda con el perfil"
 
 #: ../data/gcm-viewer.ui.h:39
 #, fuzzy
@@ -207,7 +196,6 @@ msgstr "VCGT"
 
 #. The version of the profile
 #: ../data/gcm-viewer.ui.h:42
-#| msgid "precision"
 msgid "Version"
 msgstr "Versión"
 
@@ -223,7 +211,7 @@ msgstr "Punto blanco"
 #. This is an example image that is saved in sRGB gamut
 #: ../data/gcm-viewer.ui.h:47
 msgid "sRGB example"
-msgstr ""
+msgstr "Ejemplo sRGB"
 
 #: ../data/gcm-viewer.ui.h:48
 msgid "x"
@@ -595,11 +583,11 @@ msgstr "Abrir"
 
 #: ../src/gcm-calibrate-main.c:149
 msgid "Calibration is not complete"
-msgstr ""
+msgstr "La calibración no está completa"
 
 #: ../src/gcm-calibrate-main.c:152
 msgid "Are you sure you want to cancel the calibration?"
-msgstr ""
+msgstr "¿Está seguro de que quiere cancelar la calibración?"
 
 #: ../src/gcm-calibrate-main.c:155
 #, fuzzy
@@ -680,7 +668,6 @@ msgstr "La cámara se ha calibrado correctamente."
 
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:769
-#| msgid "The display '%s' should be recalibrated soon."
 msgid "The display has been calibrated successfully."
 msgstr "La pantalla se ha calibrado correctamente."
 
@@ -831,7 +818,6 @@ msgstr "Instalar el software necesario"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:983
-#| msgid "Install now"
 msgid "Install Tools"
 msgstr "Instalar herramientas"
 
@@ -864,13 +850,11 @@ msgid "Optional data files available"
 msgstr ""
 
 #: ../src/gcm-calibrate-main.c:1051
-#| msgid "Install now"
 msgid "Install Now"
 msgstr "Instalar ahora"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1062
-#| msgid "Install"
 msgid "Install Targets"
 msgstr "Instalar objetivos"
 
@@ -1067,7 +1051,6 @@ msgstr ""
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1506
-#| msgid "Calibration error"
 msgid "Calibration Mode"
 msgstr "Modo de calibración"
 
@@ -1133,13 +1116,11 @@ msgstr[1] ""
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1632
-#| msgid "Calibration error"
 msgid "Calibration Quality"
 msgstr "Calidad de la calibración"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1668
-#| msgid "Profile type:"
 msgid "Profile title"
 msgstr "Título del perfil"
 
@@ -1150,7 +1131,6 @@ msgstr ""
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1696
-#| msgid "Profile type:"
 msgid "Profile Title"
 msgstr "Título del perfil"
 
@@ -1332,7 +1312,6 @@ msgid "Show Details"
 msgstr "Detalles"
 
 #: ../src/gcm-import.c:277
-#| msgid "Failed to copy file"
 msgid "Failed to import file"
 msgstr "Falló al importar el archivo"
 
